--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Hello World!</h1>
         
-        <a href="pages/recurso.jsf">Recurso </a></br></br>
+        <a href="pages/recurso.xhtml">Recurso </a></br></br>
         <a href="pages/pruebaTabla.xhtml">Prueba Tabla  </a>
         
     </body>
